# fabric-warehouse-data-clustering-advisor

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: docs.yml  release.yml
docs/: 404.md  configuration.md  cross-workspace.md  data-type-reference.md  getting-started.md  how-it-works.md  index.md  reports.md  troubleshooting.md
docs/advisors/: index.md
docs/advisors/data-clustering/: configuration.md  data-type-reference.md  how-it-works.md  index.md  reports.md  scoring.md
docs/advisors/performance-check/: checks.md  configuration.md  how-it-works.md  index.md  reports.md
docs/advisors/security-check/: checks.md  configuration.md  how-it-works.md  index.md  reports.md
docs/assets/: extra.css
docs/overrides/: main.html
src/fabric_data_clustering_advisor/: warehouse_reader.py
src/fabric_warehouse_advisor/: __init__.py
src/fabric_warehouse_advisor/advisors/: __init__.py
src/fabric_warehouse_advisor/advisors/data_clustering/: __init__.py  advisor.py  config.py  data_type_support.py  report.py  scoring.py
src/fabric_warehouse_advisor/advisors/performance_check/: __init__.py  advisor.py  config.py  findings.py  report.py
src/fabric_warehouse_advisor/advisors/performance_check/checks/: __init__.py  caching.py  collation.py  custom_sql_pools.py  data_types.py  query_regression.py  statistics.py  vorder.py  warehouse_type.py
src/fabric_warehouse_advisor/advisors/security_check/: __init__.py  advisor.py  config.py  findings.py  report.py
src/fabric_warehouse_advisor/advisors/security_check/checks/: __init__.py  auth_mode.py  column_level_security.py  custom_roles.py  dynamic_data_masking.py  item_permissions.py  network_isolation.py  onelake_data_access_roles.py  (+8 more)
src/fabric_warehouse_advisor/core/: __init__.py  fabric_rest_client.py  findings.py  html_template.py  icon_data.py  phase_tracker.py  predicate_parser.py  report.py  scope_resolver.py  warehouse_reader.py
src/fabric_warehouse_data_clustering_advisor/: __init__.py  advisor.py  config.py  data_type_support.py  predicate_parser.py  report.py  scoring.py  warehouse_reader.py
