[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-warehouse-advisor"
version = "1.0.0"
description = "A modular advisory framework for Microsoft Fabric Warehouse — Data Clustering, Performance, Security and more."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Fabric Warehouse Advisor Contributors"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

# pyspark is provided by the Fabric Spark runtime; don't force a version
dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pyspark>=3.4",
]

[tool.setuptools.packages.find]
where = ["src"]
